--- a/0 - Introduction to Jupyter Notebooks.ipynb
+++ b/0 - Introduction to Jupyter Notebooks.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Jupyter notebooks are documents that combine Python code, rich text, and additional code (such as Bash), organized into executable blocks. Notebooks allow users to run blocks out of order and multiple times, giving greater control over what's being run than a Python script. To run these notebooks, you'll need to install the Jupyter Notebook application (see [Installing ChipWhisperer](https://chipwhisperer.readthedocs.io/en/latest/installing.html)), which also includes file browser and text editor capabilities.\n",
+    "Jupyter notebooks are documents that combine Python code, rich text, and additional code (such as Bash), organized into executable blocks. Notebooks allow users to run blocks out of order and multiple times, giving greater control over what's being run than a Python script. You'll have the features you need installed if you followed the introduction lab.\n",
     "\n",
     "Below is an example of a Python block. First select the block by clicking on it. A green or blue border should appear around the block, indicating that the block is selected. Next, hit the `>| Run` button on the toolbar at the top of your screen. The next block should now be highlighted."
    ]
@@ -202,6 +202,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Create a plot that shows the equation x^3-x+2 from -10 to 10 in 1 increments. You may need to look up the phyton np.arange function as well as raising a number to a power. Have your instructor initial the completion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Widgets"
    ]
   },
@@ -293,14 +309,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Completing Courses"
+    "## Knowledge Check"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ChipWhisperer tutorials that are part of the 'courses' are designed to walk you through various topics. These courses have supplementary material on ChipWhisperer.io that you might enjoy for a deeper dive, but are also designed to work stand-alone to show various features of ChipWhisperer. The tutorials also can be used with other reference books or material on side-channel power analysis and fault injection."
+    "Edit and expand the following code to create an array of 100 random numbers. Then print out the location in the array and value of the largest random number. Next, create a slider with values 0 to 100 to track progress of ploting the random numbers generated above against random numbers with a range from 0 to 10 with blue circles at 1 second intervals. Have your instructor initial the completion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "randnums= np.random.randint(1,101,10)\n",
+    "print('10 random numbers from between 1 and 100 are: ', randnums)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Future Labs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Future Chip Whisperer labs will be similar to this notebook. You will be running parts and expanding or altering other parts. These labs have supplementary material on ChipWhisperer.io that you might enjoy for a deeper dive, but are also designed to work stand-alone to show various features of ChipWhisperer."
    ]
   },
   {
@@ -354,7 +395,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -368,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
