--- a/1 - Connecting to Hardware.ipynb
+++ b/1 - Connecting to Hardware.ipynb
@@ -40,99 +40,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ChipWhisperer-Nano\n",
+    "### ChipWhisperer-Lite (Single Board): ARM\n",
     "\n",
-    "The ChipWhisperer-Nano is a single-board device. It includes the capture hardware, along with a built in STM32F0 target. To use this target, simply plug in the device, then go get a drink to reward yourself:\n",
-    "\n",
-    "<img src=\"img/cwnano.jpg\" alt=\"CW-Nano Plugged In\" width=400>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ChipWhisperer-Lite (Single Board)\n",
-    "\n",
-    "The ChipWhisperer-Lite is a single-board device. It includes the capture hardware, along with a built in STM32F3 or XMEGA target. To use this target, simply plug in the device:\n",
+    "The ChipWhisperer-Lite is a single-board device. It includes the capture hardware, we will be using the version with a built in STM32F3 target. To use this target, simply plug in the device:\n",
     "\n",
     "<img src=\"img/cwlite_plugged.jpg\" alt=\"CW-Lite Plugged In\" width=400>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ChipWhisperer-Lite (2-Part Version)\n",
-    "\n",
-    "The ChipWhisperer-Lite 2-Part version includes the ChipWhisperer-Capture along with an XMEGA target. You need to attach the SMA & IDE cables, then plug in the USB cable:\n",
-    "\n",
-    "<img src=\"img/cw_2part.jpg\" alt=\"CW-Lite 2-Part Connected\" width=500>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ChipWhisperer-Lite (Capture + UFO), Includes SCAPACK-L1/SCAPACK-L2\n",
-    "\n",
-    "This package uses a ChipWhisperer-Lite Capture board, along with a CW308 UFO target board. You'll need to attach the CW308 board to your ChipWhisperer-Lite Capture, and plug in your choosen target board. The suggested target for most tutorials is the `CW308_STM32F3` - you can tell this target by checking the part number on the chip, look for a `STM32F303`.\n",
-    "\n",
-    "Here is an overview photo of the target plugged in:\n",
-    "\n",
-    "<img src=\"img/cwcapture_ufo.jpg\" alt=\"CW-Lite Plugged Into UFO\" width=600>\n",
-    "\n",
-    "See Section below on UFO Target Settings."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ChipWhisperer-Pro\n",
-    "\n",
-    "This package uses a ChipWhisperer-Pro Capture device, along with a CW308 UFO target board. You'll need to attach the CW308 board to your ChipWhisperer-Pro Capture, and plug in your choosen target board. The suggested target for most tutorials is the `CW308_STM32F3` - you can tell this target by checking the part number on the chip, look for a `STM32F303`.\n",
-    "\n",
-    "Here is an overview photo of the business end of the CW-Pro plugged into the UFO board. You'll need to also plug in the USB-A cable, and possibly the DC power jack (2.1mm DC power jack, 5V comes from either USB or wall adapter). Earlier hardware revisions always needed the DC power jack, later hardware revisions will use USB power (but high-power targets still need extra juice).\n",
-    "\n",
-    "<img src=\"img/cwpro_ufo.jpg\" alt=\"CW-Pro Plugged In\" width=500>\n",
-    "\n",
-    "See Section below on UFO Target Settings."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### UFO Target Settings\n",
-    "\n",
-    "The UFO Board comes by default with working settings for most targets. A summary of the default jumper settings is included below for you, see the product documentation for more details.\n",
-    "\n",
-    "<img src=\"img/cwufo_stm32f3.jpg\" alt=\"UFO Board\" width=500>\n",
-    "\n",
-    "#### UFO Default Settings\n",
-    "\n",
-    "* J1  - 3.3V (CW3.3V)\n",
-    "* J3  - HS2/OUT\n",
-    "* J14 - FILT/FILT_LP/FILT_HP\n",
-    "* J16 - No connection\n",
-    "\n",
-    "* S1 -  ON\n",
-    "\n",
-    "* 3.3V SRC - J1/CW\n",
-    "* VADJ SRC - 3.3V\n",
-    "* 1.2V, 1.8V, 2.5V, 3.3V, LDO SRC - J1/CW\n",
-    "* 5V SRC - J1/CW"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### CW-Lite single board: XMEGA vs ARM\n",
-    "\n",
-    "If you are unsure which single-part version you have, the following shows both boards. Note the only difference is the target section on the right.\n",
-    "\n",
-    "<img src=\"img/cwlitearm_vs_cwlitexmega.jpg\" alt=\"CW-Lite XMEGA vs Arm Board\" width=500>\n"
    ]
   },
   {
@@ -158,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default, ChipWhisperer will try to autodetect the type of device your're running (CWLite/CW1200 or CWNano), see API documentation for manually specifying the scope type. If you have multiple ChipWhisperer devices connected, you'll need to specify the serial number of the device you want to connect to:\n",
+    "By default, ChipWhisperer will try to autodetect the type of device your're running, see API documentation for manually specifying the scope type. If you have multiple ChipWhisperer devices connected, you'll need to specify the serial number of the device you want to connect to:\n",
     "\n",
     "```python\n",
     "scope = cw.scope(sn='<some long string of numbers>')\n",
@@ -182,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll only be discussing the default target type, which is SimpleSerial. Other targets, like the CW305, will be covered in hardware specific demos. \n",
+    "We'll only be discussing the default target type, which is SimpleSerial.\n",
     "\n",
     "Some sane default settings can be set using:"
    ]
@@ -247,11 +159,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You should see a big list of `PLATFORM`s to build for. We left the `PLATFORM` blank in the command above, so the build system instead printed a list of supported platforms. Fill in your platform, rerun the build command, and your firmware should be successfully built.\n",
+    "You should see a big list of `PLATFORM`s to build for. The `PLATFORM` blank in the command above, so the build system instead printed a list of supported platforms. Fill in your platform, rerun the build command, and your firmware should be successfully built.\n",
     "\n",
-    "Continuing on, there's two possible ways to upload firmware to your target:\n",
-    "\n",
-    "1. ChipWhisperer has built in support for XMEGA, STM32F*, and AVR bootloaders. These can be used as follows"
+    "Now that the firmware for the target is built, it must be uploaded. Select the appropriate programmer (hint look at the target) and include the path to the firmware you created in the previous step."
    ]
   },
   {
@@ -269,9 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. For other targets, you'll need to use an external programmer or a debugger to flash the firmware onto the target. \n",
-    "\n",
-    "Whatever your case, upload the firmware we built earlier to the target device. Next we'll be learning how to capture power traces and communicate with the target."
+    "Now that the target has been programmed, we'll be learning how to capture power traces and communicate with the target."
    ]
   },
   {
@@ -321,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It also has a `'k'` command. Try sending that now:"
+    "You just sent (wrote) the `'p'` command, it also has a `'k'` command. Try sending that now:"
    ]
   },
   {
@@ -357,7 +265,7 @@
     "command_character + ascii_encoded_bytes + '\\n'\n",
     "```\n",
     "\n",
-    "For our first command, `command_character='p'` and `ascii_encoded_bytes=\"00\"*32` (keep in mind this isn't a binary `0x00`, it's ASCII `\"00\"`, which has a binary value of `0x3030`). Try resending the `'p'` command from earlier using `target.write()`:"
+    "For our first command, `command_character='p'` and `ascii_encoded_bytes=\"00\"*16` (keep in mind this isn't a binary `0x00`, it's ASCII `\"00\"`, which has a binary value of `0x3030`). Try resending the `'p'` command from earlier using `target.write()`:"
    ]
   },
   {
@@ -406,6 +314,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Editing Source Code\n",
+    "Next you'll be editing the source code for `simpleserial-base`. You can navigate to the folder under the Jupyter Notebook or in Windows Explorer. Open `simpleserial-base.c` and edit it to return 30 when a `'k'` command is used. Demonstate this to your instructor. Once initialed change your source code back. You'll need to rerun previous blocks or enter your code below.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## SimpleSerial 2\n",
     "\n",
     "As of ChipWhisperer 5.4, a new target communication protocol, SimpleSerial 2 is available. It has a number of advantages over the old SimpleSerial protocol:\n",
@@ -416,7 +339,7 @@
     "1. It's got an 8-bit CRC (0xA6) for data integrety.\n",
     "1. Frames are consistant overhead byte stuffed (COBS). This makes it easy to reset communication (done simply by sending two 0x00 bytes) and helps catch malformed length bytes.\n",
     "\n",
-    "It is, however, a more complicated protocol. You cause use it by compiling firmware with `SS_VER=SS_VER_2_0` and using `cw.targets.SimpleSerial2`. In `sca101` and `fault101`, it can be used by setting `SS_VER='SS_VER_2_0'` when setting `PLATFORM` and `SCOPETYPE`."
+    "It is, however, a more complicated protocol. You cause use it by compiling firmware with `SS_VER=SS_VER_2_0` and using `cw.targets.SimpleSerial2`. In some future labs, it can be used by setting `SS_VER='SS_VER_2_0'` when setting `PLATFORM` and `SCOPETYPE`."
    ]
   },
   {
@@ -449,17 +372,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ChipWhisperer also has a `capture_trace()` convience function that:\n",
-    "\n",
-    "1. Optionally sends the `'k'` command\n",
-    "1. Arms the scope\n",
-    "1. Sends the `'p'` command\n",
-    "1. Captures the trace\n",
-    "1. Reads the return `'r'` message\n",
-    "1. Returns a `Trace` class that groups the trace data, `'p'` message, the `'r'` message, and the `'k'` message\n",
-    "\n",
-    "It isn't always the best option to use, but it's usually sufficient for most simpleserial applications"
+    "## Plotting Captured Traces\n",
+    "Take what you have learned so far and perform two captures. Plot both of them on the same plot, the first in red and the second in blue. Have you instructor initial completion and discuss why the traces are not the same even though they are the same instructions on the same hardware."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -467,7 +389,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "And that's it! You should be all ready to continue on to SCA101 (or any other of our courses).\n",
+    "Congrats you made it!\n",
     "\n",
     "We've glossed over some stuff here, so consult the [API documentation](https://chipwhisperer.readthedocs.io/en/latest/api.html) or ask on our [forums](https://forum.newae.com) if you get stuck.\n",
     "\n",
@@ -487,7 +409,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
