Updating clock glitching labs

--- a/2 - Introduction to Clock Glitching.ipynb
+++ b/2 - Introduction to Clock Glitching.ipynb
@@ -469,16 +469,9 @@
     "\n",
     "# width and offset numbers have a very different meaning for Husky vs Lite/Pro;\n",
     "# see help(scope.glitch) for details\n",
-    "if scope._is_husky:\n",
-    "    gc.set_range(\"width\", 0, scope.glitch.phase_shift_steps)\n",
-    "    gc.set_range(\"offset\", 0, scope.glitch.phase_shift_steps)\n",
-    "    gc.set_global_step([400, 200])\n",
-    "    scope.adc.lo_gain_errors_disabled = True\n",
-    "    scope.adc.clip_errors_disabled = True\n",
-    "else:\n",
-    "    gc.set_range(\"width\", 0, 48)\n",
-    "    gc.set_range(\"offset\", -48, 48)\n",
-    "    gc.set_global_step([8, 4, 2, 1, 0.4]) #when testing your code recommend reducing the number of steps used\n",
+    "gc.set_range(\"width\", 0, 48)\n",
+    "gc.set_range(\"offset\", -48, 48)\n",
+    "gc.set_global_step([8, 4, 2, 1, 0.4]) #when testing your code recommend reducing the number of steps used\n",
     "\n",
     "scope.glitch.repeat = 10\n",
     "\n",
@@ -552,7 +545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make sure you write down those glitch settings, since we'll be using for the rest of the glitching labs! In fact, we'll be using a lot of the general code structure here for the rest of the labs, with the only big changes being:\n",
+    "Write down those glitch settings, since we'll be using for the rest of the glitching labs! In fact, we'll be using a lot of the general code structure here for the rest of the labs, with the only big changes being:\n",
     "\n",
     "### Repeat\n",
     "\n",
