--- a/courses/fault101/Fault 1_1 - Introduction to Clock Glitching.ipynb
+++ b/courses/fault101/Fault 1_1 - Introduction to Clock Glitching.ipynb
@@ -604,9 +604,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (venv37)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "venv37"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -618,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
