--- a/3 - Clock Glitching to Bypass Password.ipynb
+++ b/3 - Clock Glitching to Bypass Password.ipynb
@@ -222,7 +222,9 @@
    "source": [
     "And make a glitch loop. Make sure you use some successful settings that you found in the previous lab, since it will make this one much shorter! Look for areas that had multiple successes, but few resets.\n",
     "\n",
-    "One change you probably want to make is to add a scan for ext_offset. The number of places we can insert a successful glitch has gone way down. Doing this will also be very important for future labs."
+    "One change you probably want to make is to add a scan for ext_offset. The number of places we can insert a successful glitch has gone way down. Doing this will also be very important for future labs.\n",
+    "\n",
+    "Modify the below code to use a glitch attack to bypass the password check. Once done, plot the values obtained that produced a reset with a red x and sucesses with a blue plus."
    ]
   },
   {
@@ -289,7 +291,21 @@
     "                print(scope.glitch.width, scope.glitch.offset, scope.glitch.ext_offset)\n",
     "                print(\"🐙\", end=\"\")\n",
     "            else:\n",
-    "                gc.add(\"normal\", (scope.glitch.width, scope.glitch.offset, scope.glitch.ext_offset))"
+    "                gc.add(\"normal\", (scope.glitch.width, scope.glitch.offset, scope.glitch.ext_offset))\n",
+    "\n",
+    "import matplotlib.pylab as plt\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "plt.axes(projection='3d')\n",
+    "ax = fig.gca()\n",
+    "\n",
+    "ax.set_xlabel('X-axis')\n",
+    "ax.set_ylabel('Y-axis')\n",
+    "ax.set_zlabel('Z-Axis')\n",
+    "\n",
+    "for rslts in gc.results.result_dict.get(\"reset\"):\n",
+    "    x,y,z=zip(rslts['parameters'])\n",
+    "    plt.plot(x,y,z,'xr')"
    ]
   },
   {
