--- a/6 - Voltage Glitching to Bypass Password.ipynb
+++ b/6 - Voltage Glitching to Bypass Password.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 2, Topic 2: Voltage Glitching to Bypass Password"
+    "# 6 - Voltage Glitching to Bypass Password"
    ]
   },
   {
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "NOTE: This lab references some (commercial) training material on [ChipWhisperer.io](https://www.ChipWhisperer.io). You can freely execute and use the lab per the open-source license (including using it in your own courses if you distribute similarly), but you must maintain notice about this source location. Consider joining our training course to enjoy the full experience.\n",
+    "This lab is based on training material on [ChipWhisperer.io](https://www.ChipWhisperer.io).\n",
     "\n",
     "---"
    ]
@@ -85,33 +85,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if PLATFORM == \"CWLITEXMEGA\":\n",
-    "    scope.clock.clkgen_freq = 32E6\n",
-    "    if SS_VER=='SS_VER_2_0':\n",
-    "        target.baud = 230400*32/7.37\n",
-    "    else:\n",
-    "        target.baud = 38400*32/7.37\n",
-    "    def reboot_flush():            \n",
-    "        scope.io.pdic = False\n",
-    "        time.sleep(0.1)\n",
-    "        scope.io.pdic = \"high_z\"\n",
-    "        time.sleep(0.1)\n",
-    "        #Flush garbage too\n",
-    "        target.flush()\n",
+    "scope.clock.clkgen_freq = 24E6\n",
+    "if SS_VER=='SS_VER_2_0':\n",
+    "    target.baud = 230400*24/7.37\n",
     "else:\n",
-    "    scope.clock.clkgen_freq = 24E6\n",
-    "    if SS_VER=='SS_VER_2_0':\n",
-    "        target.baud = 230400*24/7.37\n",
-    "    else:\n",
-    "        target.baud = 38400*24/7.37\n",
-    "    time.sleep(0.1)\n",
-    "    def reboot_flush():            \n",
-    "        scope.io.nrst = False\n",
-    "        time.sleep(0.05)\n",
-    "        scope.io.nrst = \"high_z\"\n",
-    "        time.sleep(0.05)\n",
-    "        #Flush garbage too\n",
-    "        target.flush()"
+    "    target.baud = 38400*24/7.37\n",
+    "time.sleep(0.1)\n",
+    "def reboot_flush():            \n",
+    "    scope.io.nrst = False\n",
+    "    time.sleep(0.05)\n",
+    "    scope.io.nrst = \"high_z\"\n",
+    "    time.sleep(0.05)\n",
+    "    #Flush garbage too\n",
+    "    target.flush()"
    ]
   },
   {
@@ -149,15 +135,8 @@
     "scope.glitch.clk_src = \"clkgen\" # set glitch input clock\n",
     "scope.glitch.output = \"glitch_only\" # glitch_out = clk ^ glitch\n",
     "scope.glitch.trigger_src = \"ext_single\" # glitch only after scope.arm() called\n",
-    "if PLATFORM == \"CWLITEXMEGA\":\n",
-    "    scope.io.glitch_lp = True\n",
-    "    scope.io.glitch_hp = True\n",
-    "elif PLATFORM == \"CWLITEARM\":\n",
-    "    scope.io.glitch_lp = True\n",
-    "    scope.io.glitch_hp = True\n",
-    "elif PLATFORM == \"CW308_STM32F3\":\n",
-    "    scope.io.glitch_hp = True\n",
-    "    scope.io.glitch_lp = True"
+    "scope.io.glitch_lp = True\n",
+    "scope.io.glitch_hp = True"
    ]
   },
   {
@@ -186,7 +165,6 @@
     "g_step = 0.4\n",
     "\n",
     "# insert settings you found in the last part\n",
-    "# the starting values here are appropriate for CW-Lite/Pro; for CW-Husky, refer to Fault 1_1\n",
     "gc.set_range(\"width\", 0, 47.8)\n",
     "gc.set_range(\"offset\", 0, 10)\n",
     "gc.set_range(\"ext_offset\", 11, 31)\n",
@@ -264,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
