Update 2 - Introduction to Clock Glitching.ipynb

--- a/2 - Introduction to Clock Glitching.ipynb
+++ b/2 - Introduction to Clock Glitching.ipynb
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run \"../../Setup_Scripts/Setup_Generic.ipynb\""
+    "%run \"./Setup_Scripts/Setup_Generic.ipynb\""
    ]
   },
   {
@@ -157,7 +157,7 @@
    "outputs": [],
    "source": [
     "%%bash -s \"$PLATFORM\" \"$SS_VER\"\n",
-    "cd ../../../hardware/victims/firmware/simpleserial-glitch\n",
+    "cd ../hardware/victims/firmware/simpleserial-glitch\n",
     "make PLATFORM=$1 CRYPTO_TARGET=NONE SS_VER=$2"
    ]
   },
@@ -167,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fw_path = \"../../../hardware/victims/firmware/simpleserial-glitch/simpleserial-glitch-{}.hex\".format(PLATFORM)\n",
+    "fw_path = \"../hardware/victims/firmware/simpleserial-glitch/simpleserial-glitch-{}.hex\".format(PLATFORM)\n",
     "cw.program_target(scope, prog, fw_path)"
    ]
   },
