Update 3 - Clock Glitching to Bypass Password.ipynb

--- a/3 - Clock Glitching to Bypass Password.ipynb
+++ b/3 - Clock Glitching to Bypass Password.ipynb
@@ -83,7 +83,7 @@
    "outputs": [],
    "source": [
     "%%bash -s \"$PLATFORM\"\n",
-    "cd ../../../hardware/victims/firmware/simpleserial-glitch\n",
+    "cd ../hardware/victims/firmware/simpleserial-glitch\n",
     "make PLATFORM=$1 CRYPTO_TARGET=NONE"
    ]
   },
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run \"../../Setup_Scripts/Setup_Generic.ipynb\""
+    "%run \"./Setup_Scripts/Setup_Generic.ipynb\""
    ]
   },
   {
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fw_path = \"../../../hardware/victims/firmware/simpleserial-glitch/simpleserial-glitch-{}.hex\".format(PLATFORM)\n",
+    "fw_path = \"../hardware/victims/firmware/simpleserial-glitch/simpleserial-glitch-{}.hex\".format(PLATFORM)\n",
     "cw.program_target(scope, prog, fw_path)\n",
     "if SS_VER == 'SS_VER_2_0':\n",
     "    target.reset_comms()"
