Update 4 - Clock Glitching to Memory Dump.ipynb

--- a/4 - Clock Glitching to Memory Dump.ipynb
+++ b/4 - Clock Glitching to Memory Dump.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "%%bash -s \"$PLATFORM\" \"$SS_VER\"\n",
-    "cd ../../../hardware/victims/firmware/bootloader-glitch\n",
+    "cd ../hardware/victims/firmware/bootloader-glitch\n",
     "make PLATFORM=$1 CRYPTO_TARGET=NONE"
    ]
   },
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run \"../../Setup_Scripts/Setup_Generic.ipynb\""
+    "%run \"./Setup_Scripts/Setup_Generic.ipynb\""
    ]
   },
   {
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fw_path = \"../../../hardware/victims/firmware/bootloader-glitch/bootloader-{}.hex\".format(PLATFORM)"
+    "fw_path = \"../hardware/victims/firmware/bootloader-glitch/bootloader-{}.hex\".format(PLATFORM)"
    ]
   },
   {
