Update 5 - Voltage Glitching.ipynb

--- a/5 - Voltage Glitching.ipynb
+++ b/5 - Voltage Glitching.ipynb
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run \"../../Setup_Scripts/Setup_Generic.ipynb\""
+    "%run \"./Setup_Scripts/Setup_Generic.ipynb\""
    ]
   },
   {
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "%%bash -s \"$PLATFORM\" \"$SS_VER\"\n",
-    "cd ../../../hardware/victims/firmware/simpleserial-glitch\n",
+    "cd ../hardware/victims/firmware/simpleserial-glitch\n",
     "make PLATFORM=$1 CRYPTO_TARGET=NONE SS_VER=$2"
    ]
   },
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fw_path = \"../../../hardware/victims/firmware/simpleserial-glitch/simpleserial-glitch-{}.hex\".format(PLATFORM)\n",
+    "fw_path = \"../hardware/victims/firmware/simpleserial-glitch/simpleserial-glitch-{}.hex\".format(PLATFORM)\n",
     "cw.program_target(scope, prog, fw_path)\n",
     "if SS_VER==\"SS_VER_2_0\":\n",
     "    target.reset_comms()"
